--- a/aejynmain/frmAddCustomer.resx
+++ b/aejynmain/frmAddCustomer.resx
@@ -118,83 +118,37 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnNewCustomer.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="kryptonPictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAGpSURBVFhH7ZY9
-        L0RREIZXRKGhVKk06PwEpUohROUHKOh8JXo1OmvFro9QK/wNH70ElShEFAo8Mslscvbde7Ln3t0NEk9y
-        k82dmXfOPTM755RKfxFgHFgHDvyx32Pq13GAQeAE+KIZe3cMDGhcR/DkN5o1g+uuLMK/PJWaxreF1zxr
-        22OYb+d6AtjQDAmsqU5hvNPzsq86hQEqqp5AWXUK8xtKMJazCT+BUdVpCx8yqVQ1vm1suPiQacVVVwaR
-        4Ys4ipTDtr3ateQh3hOrwWG00vGa/6MAE/bfBnaB88izAywDPRpfGGDKOzuVO6BPdXID9AJbqt6CW2BY
-        tQoBHKp6C56AoQydMvACTKstCrCo6gnMq44BfLj9VG2Z+NXrWcRb8WglUy0j8DlXWyYFv35bdeoEPskL
-        uAyCUlkK4mvBtsd4A2YaMzvAvXonsBDEv6oxwl5jZgd4V88ENoP4WWu4YDjVeQje2Q1rpDGz4455OVOd
-        OoFPcg/kHT6G7VrTDDACn+QF9AMXQWAqmXdAbzijorYodpgAcz7F9MCJPZOqY1i3W8NFa/7TfANOl0ao
-        L+Vf2QAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <metadata name="CustomerID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="FirstName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="LastName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Gender.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="BirthDate.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="ContactNumber.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="EmailAddress.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Address.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="LicenseNumber.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="LicenseExpiryDate.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="DateRegistered.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <data name="btnSearchCustomer.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAJbSURBVFhH7dbL
-        q81RGMZxl4yEiRkDTJChcikpA5cRE6JIuYwwkv9AYaRMFIZKhjgZIhOUQoYupSiXhESRy0cva+3Wec8+
-        9rb3YeQ7OWf3PGutd/3WWu/7Tpr0GzAVq3EcN/EUn/EC93EO2zArjx0KTMYWPNAfH3FsQgLBbFzNK+A1
-        buACruNhNuA5VuU5+wYL8biZ8AvOYCWmdPHPwyG8bMbEEe3M3p6UnbeL38Gi7OsGZuBkM/YrNmTfuJQz
-        v9JMMILp2dcL7Mf3MsdbzM+ermBrs/jdQRav4Egz1/msj6E8tXqh4sz7+uzjEXelbCKIr7E0e0ZR3nnl
-        dNYHAeubOU9kfRQlyVRWZH0Qyp2KpBU8id/Z0wG3ivFVt6c2KDjVbGxu1js0kd7M2jCU/FBZlvUO+FRM
-        F7M2DNjRBLAx6x3Kpw+uZW0YcKAJYE3WO+BeMT3K2jCU4lRZkvUOpaRW5mV9UHC7zPke07LeodTzyqGs
-        DwIWNCl5JOujiBqOD8UcVW1G9vwpONtsanPWx4DDzYCTWf8TsBbfylzR0EzNnjFgZmkmKvuzpx+wGG/K
-        HHEE67JnXKKTKc1EHRxVre/MWHZeFw8uZ09PopMpzUQlqloUlnFzeblwceb1s1fi957s70l0MqWZaHkW
-        lRIHsb0kmaPlqdXbHsT/l5tg4u/evEZPopOJZiJN3ou4cD/PPHY+dBBBNBNRz0tJ7UYkmUvx1PJ9mbAg
-        KpiD5dgUuT3S628z3K8xeyc0iEHA7iaIONJ92fPX+R9Epcud2JU9f50UxJus/xNi53gXjesPVfOagZku
-        JWAAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnViewCustomer.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAIJSURBVFhH7ddN
-        iE1hGAdwX8NIYeOrlLJASbEwsVA2KA0rK2VpQynFSmksrUSUSQploWzZyMZHFgohKbGxEEK+lfjpqfdO
-        1zPjOu+9s5zf5ta55/0/55z7nud976RJExrCAgzhLj7gO55hGAP5/HGF3fjs337jHGbmsT3DoVytg1uY
-        kTO6hk3l7mqczDldw4Oc3sBPLMtZ1bA6J1cYynnVsCenVriW86rhSE6t8DjnVcOBnFrhds6rhsGcWuFs
-        zqsWTQUfc3JDgzmvKzickxu4jyk5qyvox51coYNo16tyTk8wDzdzpTG8wYY8flygD/vwMlfFF5zGojxu
-        3GB2+ZyMNdiBXdjYWgHLRfbnsT3Btmgq+IoTWItp6Zwl2I8X5WeI1bOv/ZxqmIpT+VkX8cif4hFe5y+L
-        2LQszLmNdShe4yHm5Oz/wtac1IPhnN9RmWRPckqlq2WSLsX8XKMjrMtpFWKyjmxO483B4jxpO8LBnNrQ
-        ZcwqGVtiNWzbysUO+lg0tFxvFBxPwU1cibssi9eF/GWbd9ica/4FZ/KoBgbKa3s9HT9a2ngUbon94vZc
-        d0R5VLWiG8bkPZ+Ox/+EmFPRN1o+YX2uOwIr8KptQBPRdOaWi4jlO+5yLNG8Vuaao5QlOFruzvJX7CJu
-        4B6e4y2+4RfelwXqUqv9YnmZC3EjP8r+YC+m51oTwh87/A7mZr/UuwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wAAADsABataJCQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAYjSURBVHhe7Ztp
+        iBxFFMfXeIvnR0VQUb8Yvy2Y9OuNLB5ovCKaKN4HKqLmQxQ8tl+FFg+MCoof1HgFduvVxkWDGo0mChEP
+        FFGjRiOKmuiuSlBDIpqI7Gbl9fQM3a9qeqZnenp3cf7wg2XmXVXb3VX9arenp6uuuuqqJPWHK/bzUJ/j
+        IT0DqN+HgDZHVH5+mr+bv3jNvtJvxmvRopE9PaWvBaRRQJpswCiguaYnDGfJODNS/u3PHgRoXnYMNBMf
+        9ev94YpDZbwZpTmhPthH+lwOrlnYl2PIuDNDYTgLlH5VDqoFVs/I28FTdKVjMC3hB3SZjD+t1XvD8r0B
+        aYscSMsEtJljyjzTVv5Sc7o1iDbxlupTZZ6OqjdcfgCgWewjvVlbrwNa5yu6hb+T9kkB6sfkAArgUZkn
+        qXbqtdQXmD5A+tlRRIwZm6u0L/2qgoDesn3aZq3MU1W79abEhoD0jx3EYhco40l/FiB96bBvE7NR5mEV
+        UW9NvFUFpJ8czvXYwj4yDiB94bBtE/OZzFNUvTUB6usdTpn4ylxnx6G10q5dvIDW2HmKqbcmT9Er0qEh
+        il6ScXxFD1l27aLMMpmnqHprau3ete/N+KHksG0dLxgGmaeoemtqbd9u35v89geoN9m2reEp+sq1HS6q
+        3ppA0Qu2Qza+ohEZhwUBLZC2rcJ9AhmfVWS9kUCZy6VDIzylL5Vxqqo0PmyfnAzKuFUVXW9Pf7h+L1D0
+        tXSqB1+a7CPjVMXdHUB6W/o1i4dmfVaHqOh6I8HA4ImAtF06O9juKzNb+kvFk/Ccwz8TH4m8JSP7y3hS
+        Rdcbad5d+oSszQw/fNhG+mVpLtJpgPSpjCXh35IX0CLpn6VO1Ft9ki/kezBqWkbQIATmQtcTuTlN7tGn
+        qNdT+m4P6cVq3MrPFPJ3bCO9mlFn6u2qq67+d5odjuzDTUgP9fO8bwakrYC0LeZHQPrEC+gJH4fO4weP
+        9HcJcOWxoMxNvLSxPyD9Dkjj0VMf6a84NvcQN/AZgofm/soDsbGivUBAC3zUT8arDL8eV+vdGo9hJW+A
+        eGzSPyV/QM/3kH6Qy0g94iXrJBmnKg/N+YDmHUDaLX2bQtE3XmAuqbcycO48GyEI6HtvKZ0h40Tifhog
+        TVhO2ezm7aiMNQfpeB/pPYd9q3zgWsf5Sm1hcsc91DenAsUvLnkHPwmo700FinoB5iJA+tO2bZsdMDB8
+        tswHiu5x2DZiovaCVemmZjUU67JaXpqA+rYWfiN5GAdFVydzcg1ci8O2EaPRVpsfTo4vG7HrZBw8JlkG
+        t5ocdp3gX0BzSjL33HD4aEDa6bDNxFf6Rr7818kvGqLovmQB/MRusjNbFNsgoKOSNfBW2mGXTUBvsGPe
+        y39n7x0jh9Qy8yEo0kcOu47Cy3RyAvgUGZD+lnbZmDGegGg9zsHKZOIiOz852c29x1QtSNphl8U4O8kP
+        sxFPYm5XWzZlEdC6VC1ozrRsGpB3Aib4Lz6qCf1w+IjWls/CmJgT6iOr9fSHIwfmvaJzTUDUnU2IGxfS
+        pmzkQUe89bXs6pFrAngvn0zmoX5Q2pQNN16TNQHqIWmTRa4JAKQH0snoNYdN2bybqkmZZQ6buuSaAB9p
+        SSpZEz2+TiNvSwjMrdImi1wTAAFdkUqGZsyyKZuANidr8gN9lWWTQb4JQL0wmaxDLz35EBPA7/2WTQa5
+        JoDf75PJ8u+8OoCYgLgzbNvVIecEpM/oSt7/u5FXQNSEcdjVIdcE9AXm3GSy6TgBPtIFlk0GuSZA3gJx
+        P8+yK5Uyb4HolCWVrKkzuc4ir4BAX2zZZMCD+EN+WA8OnkwGSL9JmylgS7ImbqI6bOqxg9fypv+UXZ6t
+        +6h/lTZTQGoC4kaptKnHcI8XDh0X99DllzbWRqipf4DoNKkJ4BodNg7M2LyBocMjp8prrXkq7ux8HLOB
+        ++g1kL71kc5KJUP6zg5cNnpTsiY+2+BaRe28ZY/G5aH+0Ffmkb476bCkX0vinppdUMlwX2+qFJ8B2EWV
+        CNcg6ypVgPS4LKpEtDybmBLxBslXZlXlPjMbU/dfsyD9Eh2Qys+Zyvlf9f5dBWge7sOh/mkx+K666mpG
+        6z/J+uaAm1hrRwAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
